@@ -1,3 +1,9 @@
+2009-02-16  Ray Strode  <rstrode@redhat.com>
+
+	* gconf/default.path.in: move the directory used by the
+	defaults mechanism, so that its effects are mandatory
+	(bug 558490).
+
 2009-02-15  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Bump version
